--- a/MOBILE/html/new/funding_detail2.html
+++ b/MOBILE/html/new/funding_detail2.html
@@ -140,8 +140,8 @@
                         </h3>                        
                         <div class="fund_alert">
                             <span>주문종료</span>
-                            <span class="unit_number only_english">16</span>
-                            <span>일 남음</span>
+                            <!-- <span class="unit_number only_english">16</span>
+                            <span>일 남음</span> -->
                         </div>
                     </div>
                     <div class="funding_goal_box mt40">
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="funding_goal_text_wrap mgt30 borderline">
-                        <div class="funding_goal_text funding_icon1">
+                        <div class="funding_goal_text funding_icon2">
                             <span>목표금액</span>
                             <span class="only_english">2,256,700</span>
                             원이 달성되면, 상품 준비와 배송이 진행 됩니다.
@@ -466,7 +466,6 @@
             </div>
             <!-- //QnA -->
         </div>
-        
     </div>
     <!-- / content -->
 
