--- a/MOBILE/html/new/funding_main.html
+++ b/MOBILE/html/new/funding_main.html
@@ -466,13 +466,13 @@ $(document).ready(function(){
 	</div>
 	<!--// header -->
 	<!-- content -->
-	<!-- 20210122 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
+	<!-- 20210125 S : 작업부분 id="content" class="orderandpay" 넣어주세요-->
 	<div id="content" class="orderandpay">
 		<div class="main_wrapper">
 			<div class="cont cont01">
 				<div class="funding_main_logo_wrap">
 					<h3 class="funding_title">
-						핫트랙스와 펀딩이 함께 하는<strong>핫트딜</strong>
+						<span>핫트랙스와 펀딩이 함께 하는</span><strong>핫트딜</strong>
 					</h3>
 					<ul class="funding_process_list">
 						<li class="items">
@@ -543,7 +543,7 @@ $(document).ready(function(){
 					<div class="stuff_cont">
 						<div class="fund_alert">
 							<span>주문종료</span>
-							<span class="unit_number font_t">16</span>
+							<span class="unit_number only_english">16</span>
 							<span>일 남음</span>
 						</div>
 						<div class="stuff_tit_box">
@@ -553,7 +553,7 @@ $(document).ready(function(){
 							</a>
 						</div>
 						<div class="stuff_price_box">
-							<strong class="price"><b class="font_t">12,730</b>원</strong>
+							<strong class="price"><b class="only_english">12,730</b>원</strong>
 						</div>
 						<div class="funding_goal_box">
 							<div class="funding_progressbar">
@@ -563,7 +563,7 @@ $(document).ready(function(){
 								<dl class="funding_goal_price_type1">
 									<dt>핫트딜 달성금액</dt>
 									<dd>
-										<span class="font_t">2,256,700</span>
+										<span class="only_english">2,256,700</span>
 										<span>원</span>
 									</dd>
 								</dl>
@@ -591,7 +591,7 @@ $(document).ready(function(){
 					<div class="stuff_cont">
 						<div class="fund_alert">
 							<span>주문종료</span>
-							<span class="unit_number font_t">16</span>
+							<span class="unit_number only_english">16</span>
 							<span>일 남음</span>
 						</div>
 						<div class="stuff_tit_box">
@@ -601,7 +601,7 @@ $(document).ready(function(){
 							</a>
 						</div>
 						<div class="stuff_price_box">
-							<strong class="price"><b class="font_t">12,730</b>원</strong>
+							<strong class="price"><b class="only_english">12,730</b>원</strong>
 						</div>
 						<div class="funding_goal_box">
 							<div class="funding_progressbar">
@@ -611,18 +611,18 @@ $(document).ready(function(){
 								<dl class="funding_goal_price_type1">
 									<dt>핫트딜 달성금액</dt>
 									<dd>
-										<span class="font_t">2,256,700</span>
+										<span class="only_english">2,256,700</span>
 										<span>원</span>
 									</dd>
 								</dl>
 								<dl class="funding_goal_price_type2">
 									<dt>
 										<span>목표금액</span>
-										<span class="unit_price font_t">5,000,000</span>
+										<span class="unit_price only_english">5,000,000</span>
 										<span>원</span>
 									</dt>
 									<dd>
-										<span class="unit_percent font_t">35%</span>
+										<span class="unit_percent only_english">35%</span>
 										<span>달성</span>
 									</dd>
 								</dl>
@@ -651,7 +651,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#코코도르 디퓨저</span>
 							<span class="txt">120ml X 2개</span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</li>
 						<li class="stuff_item">
@@ -661,7 +661,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</li>
 						<li class="stuff_item">
@@ -671,7 +671,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#코코도르 디퓨저</span>
 							<span class="txt">120ml X 2개</span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</li>
 						<li class="stuff_item">
@@ -681,7 +681,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</li>
 					</ul>
@@ -704,7 +704,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 						<div class="swiper-slide stuff_item">
@@ -714,7 +714,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</div>
 						<div class="swiper-slide stuff_item">
@@ -724,7 +724,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 						<div class="swiper-slide stuff_item">
@@ -734,7 +734,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn complete">앵콜완료</a>
 						</div>
 						<div class="swiper-slide stuff_item">
@@ -744,7 +744,7 @@ $(document).ready(function(){
 							</span>
 							<span class="tit">#큐피드곰 에어팟 케이스</span>
 							<span class="txt"></span>
-							<span class="price t_r"><span class="font_t">999,999</span>원</span>
+							<span class="price t_r"><span class="only_english">999,999</span>원</span>
 							<a href="#" class="encore_btn request">앵콜요청</a>
 						</div>
 					</div>
