--- a/PC/html/new/funding_main.html
+++ b/PC/html/new/funding_main.html
@@ -499,7 +499,7 @@
                 		<div class="funding_text_wrap">
                 			<h3 class="funding_title">
 	                			<div class="text">핫트랙스와 펀딩이 함께 하는</div>
-	                			<div class="text_icon only_english">핫트딜</div>
+	                			<div class="text_icon">핫트딜</div>
 	                		</h3>
 	                		<div class="funding_desc_texts mgt20">
 	                			<p class="text">핫트딜 펀딩 참여 후 목표가 달성되면 상품이 최종 구매 완료 됩니다.</p>
