--- a/PC/html/new/mypageMain_this.html
+++ b/PC/html/new/mypageMain_this.html
@@ -447,33 +447,67 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </a>
                                 </li>
                             </ul>
-                            <ul class="membership_list col2">
-                                <li class="items">
+                            <ul class="membership_list col3 mgt8">
+                                <li class="items other">
                                     <a href="javascript:;" class="link">
                                         <div class="text_wrap">
-                                            <span class="unit_go_text">
+                                            <p class="unit_go_text icon_my_like">
                                                 좋아요
-                                            </span>
-                                            <span>
-                                                내가 좋아요 한 상품/브랜드/이럴 때, 좋아요를 확인하세요. 
-                                            </span>
+                                            </p>
+                                            <p class="my_like_text mgt10">
+                                                내가 <span class="text">좋아요 한 상품/브랜드/이럴 때, 좋아요</span>를 확인하세요. 
+                                            </p>
+                                            <ul class="my_like_list mgt30">
+                                                <li class="items">
+                                                    <dl class="my_like_list_wrap">
+                                                        <dt class="my_like_list_text">
+                                                            좋아요 상품 
+                                                        </dt>
+                                                        <dd class="my_like_list_num elip only_english">
+                                                            99
+                                                        </dd>
+                                                    </dl>
+                                                </li>
+                                                <li class="items">
+                                                    <dl class="my_like_list_wrap">
+                                                        <dt class="my_like_list_text">
+                                                           좋아요 브랜드
+                                                        </dt>
+                                                        <dd class="my_like_list_num elip only_english">
+                                                            99
+                                                        </dd>
+                                                    </dl>
+                                                </li>
+                                                <li class="items">
+                                                    <dl class="my_like_list_wrap">
+                                                        <dt class="my_like_list_text">
+                                                            이럴 때, 좋아요
+                                                        </dt>
+                                                        <dd class="my_like_list_num elip only_english">
+                                                            99
+                                                        </dd>
+                                                    </dl>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="items">
                                     <a href="javascript:;" class="link">
                                         <div class="text_wrap">
-                                            <span class="unit_go_text">
+                                            <span class="unit_go_text icon_my_edit">
                                                 내 상품평 관리
                                             </span>
-                                            <span></span>
+                                            <p class="my_like_text mgt10">
+                                                작성 가능 <span class="text">상품평</span> <span class="only_english my_edit_num">16</span>
+                                            </p>
                                         </div>
                                     </a>
                                 </li>
                             </ul>
-                            <ul class="membership_list col3">
+                            <ul class="membership_list col3 mgt8">
                                 <li class="items">
-                                    <a href="javascript:;" class="link">
+                                    <a href="javascript:;" class="link height_set">
                                         <div class="text_wrap">
                                             <span class="unit_go_text">
                                                 상품 Q&amp;A 
@@ -482,7 +516,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </a>
                                 </li>
                                 <li class="items">
-                                    <a href="javascript:;" class="link">
+                                    <a href="javascript:;" class="link height_set">
                                         <div class="text_wrap">
                                             <span class="unit_go_text">
                                                 이벤트 참여 내역 
@@ -491,15 +525,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     </a>
                                 </li>
                                 <li class="items">
-                                    <a href="javascript:;" class="link">
-                                        <div class="text_wrap">
-                                            <span class="unit_go_text">
-                                                SOS 상담
-                                            </span>
-                                            <span>진행중인 상담내역이 있습니다.</span>
-                                            <span>상담내역 바로가기</span>
-                                        </div>
-                                    </a>
+                                    <div class="link">
+                                        <a href="javascript:;" class="inner_link">
+                                            <div class="text_wrap">
+                                                <span class="unit_go_text">
+                                                    SOS 상담
+                                                </span>
+                                                <div class="unit_status mgt8">진행중인 상담내역이 있습니다.</div>
+                                            </div>
+                                        </a>
+                                        <a href="javascript:;" class="unit_go_consulting mgt10 ">상담내역 바로가기</a>
+                                    </div>                                    
                                 </li>
                             </ul>
                         </div>
