--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1163,7 +1163,7 @@ th.row-headers-background {
         <td class="s9"></td>
         <td class="s16"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/main_sidemenu.html">./html/new/main_sidemenu.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_main.html">./html/new/funding_main.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"> 이미지팝업</td>
       </tr>
@@ -1174,7 +1174,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail1.html">./html/new/funding_detail1.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1185,7 +1185,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail2.html">./html/new/funding_detail2.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
@@ -1196,7 +1196,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s16" dir="ltr"></td>
         <td class="s16"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/memberShip.html">./html/new/memberShip.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/funding_detail3.html">./html/new/funding_detail3.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
       </tr>
