--- a/PC/html/new/orderDelivery.html
+++ b/PC/html/new/orderDelivery.html
@@ -337,24 +337,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- //lnb -->
                 <!-- sub contents -->
                 <div class="sub_contents my_list_section">
-                    <h3 class="page_title mgt0">주문/배송 조회</h3>
-                    <ul class="list_type02_v2 mgt10 pdb30 bb_line">
-                        <li>최근 6개월간의 주문내역을 기본으로 보여드립니다.</li>
+                    <h3 class="page_title mgt0 border">주문/배송 조회</h3>
+                    <ul class="list_type02_v2">
+                        <!-- <li>최근 6개월간의 주문내역을 기본으로 보여드립니다.</li>
                         <li>주문번호, 상품명을 클릭하시면 주문 상세내역 및 배송 현황을 확인하실 수 있습니다.</li>
                         <li><strong>상품 준비 이전 단계까지만 주문 취소가 가능합니다.</strong></li>
                         <li>주문취소/변경은 <strong>'마이핫트랙스 &gt; 주문정보 &gt; 주문취소/변경'</strong>을 통해 가능합니다.</li>
                         <li>상품평 작성에 대한 포인트 적립은 작성 후 익일 PM:11시가 지나야 적립됩니다.</li> 
                         <li>구매 후 3개월 이내에 상품후기를 작성하셔야 포인트 적립이 가능합니다.</li>
-                        <li>CD, DVD 관련 상품은 상품평을 작성하셔도 포인트 적립대상에서 제외입니다.</li>
+                        <li>CD, DVD 관련 상품은 상품평을 작성하셔도 포인트 적립대상에서 제외입니다.</li> -->
+
+                        <li>주문내역은 최대 1년 까지 조회 가능합니다.</li> 
+                        <li>주문번호, 상품명을 클릭하시면 주문상세내역 및 배송현황을 확인하실 수 있습니다.</li>
+                        <li>상품준비 이전 단계 시 주문 취소 가능합니다.</li>
+                        <li>주문취소/변경은 <strong>[마이핫트랙스 &gt; 주문취소/변경]</strong> 메뉴를 통해 가능합니다.</li>
                     </ul>
-                    <div class="period_srch">
+                    <div class="mgt60 period_srch">
+                        <h3 class="page_title mgt0">주문/배송조회 기간 설정</h3>
+                        <ul class="tab_btn02">
+                            <li  class="active"><a href="#n" _onclick="orderSearch(0)">최근 6개월 주문</a></li>
+                            <li ><a href="#n" _onclick="orderSearch(1)">6개월 이전 주문</a></li>
+                            <li ><a href="#n" _onclick="orderSearch(2)">취소 주문 조회</a></li>
+                        </ul>
+
+                    </div>
+                    <!-- <div class="period_srch">
                         <h4>조회기간</h4>
                         <ul class="tab_btn02">
                             <li  class="active"><a href="#n" _onclick="orderSearch(0)">최근 6개월 주문</a></li>
                             <li ><a href="#n" _onclick="orderSearch(1)">6개월 이전 주문</a></li>
                             <li ><a href="#n" _onclick="orderSearch(2)">취소 주문 조회</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                     <table class="bbs_list_v2">
                         <caption>조회기간별 주문내역 <span>주문일, 주문번호, 주문상품, 주문금액, 주문상태</span>
                         </caption>
