--- a/PC/html/new/orderDelivery.html
+++ b/PC/html/new/orderDelivery.html
@@ -353,7 +353,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li>주문취소/변경은 <strong>[마이핫트랙스 &gt; 주문취소/변경]</strong> 메뉴를 통해 가능합니다.</li>
                     </ul>
                     <div class="mgt60 period_srch">
-                        <h3 class="page_title mgt0">주문/배송조회 기간 설정</h3>
+                        <h3 class="page_title mgt0 border mgb0">주문/배송조회 기간 설정</h3>
                         <ul class="tab_btn02">
                             <li  class="active"><a href="#n" _onclick="orderSearch(0)">최근 6개월 주문</a></li>
                             <li ><a href="#n" _onclick="orderSearch(1)">6개월 이전 주문</a></li>
@@ -435,12 +435,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <!-- //paging -->
                     <h3 class="page_title mgt60">주문처리 안내</h3>
-                    <ol class="step_list order_step">
+                    <!-- <ol class="step_list order_step">
                         <li><strong>결제완료</strong> 결제내역 확인</li>
                         <li><strong>상품준비</strong> 상품 출고지시</li>
                         <li><strong>배송중</strong> 상품 출고완료</li>
                         <li><strong>배송완료</strong> 상품고객수령</li>
-                    </ol>
+                    </ol> -->
+                    <div class="img_change_box">
+                        <ul class="change_list">
+                            <li>
+                                <span class="img_include_wrap">
+                                    <span class="img_include_txt key">
+                                        결제완료
+                                    </span>
+                                    <span class="texts">
+                                        결제내역 확인
+                                    </span>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="img_include_wrap">
+                                    <span class="img_include_txt receipt">
+                                        상품준비
+                                    </span>
+                                    <span class="texts">
+                                        상품 출고지시
+                                    </span>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="img_include_wrap">
+                                    <span class="img_include_txt allpoint">
+                                        배송중
+                                    </span>
+                                    <span class="texts">
+                                        상품 출고완료
+                                    </span>
+                                </span>
+                            </li>
+                            <li>
+                                <span class="img_include_wrap">
+                                    <span class="img_include_txt allpoint">
+                                        배송완료
+                                    </span>
+                                    <span class="texts">
+                                        상품고객수령
+                                    </span>
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- //sub contents -->                
             </div>
