--- a/PC/html/new/createFormTxinRequest.html
+++ b/PC/html/new/createFormTxinRequest.html
@@ -9,98 +9,107 @@
 <meta name="viewport" content="width=950">
 <title>HOTTRACKS - 생활 속 감성충전소</title>
 <!-- 태그 라이브러리 -->
-<link href="/images/biz/common/favicon.ico" rel="shortcut icon">
-<link rel="apple-touch-icon-precomposed" href="/images/ico_app.png" />
-<link rel="apple-touch-startup-image" href="/images/ico_app.png">
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+<link rel="apple-touch-icon-precomposed" href="../../images/ico_app.png" />
+<link rel="apple-touch-startup-image" href="../../images/ico_app.png">
 
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,700|Titillium+Web:400,600&display=swap&subset=korean">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/contents.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common_v2.css">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/contents.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottweb_yj.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/slick.css">
+<link rel="stylesheet" type="text/css" href="../../css/shop.css">
+<!-- 210125 작업부분 -->
+<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../scripts/common.js"></script>
 
-<script type="text/javascript" src="/js/jquery-1.9.1.min.js?201906210101"></script>
-<script type="text/javascript" src="/scripts/common?201906210101"></script>
 
-
-<script type="text/javascript" src="/js/jquery.form.js"></script>
+<script type="text/javascript" src="../../js/jquery.form.js"></script>
 
 </head>
-<body class="popup">
-    
-<div class="f_noto">
-    <h1 class="tit01 mgt0 fs24 c_white"><span class="fw500">사업자등록번호 등록</span></h1>
-    <div class="pop_cont">
-        <form name="createTaxBillRequestForm" id="createTaxBillRequestForm" action="/ht/mypage/addUserBusinessRegistNum" method="post">
-        <table class="table02_v1 mgt15">
-            <colgroup> 
-                <col width="15%" />
-                <col width="35%" />
-                <col width="15%" />
-                <col width="35%" />
-            </colgroup>
-            <tbody>
-                <tr>
-                    <th>사업자등록번호</th>
-                    <td colspan="3"><input type="text" name="bizRegNum1" style="width:36px;" class="input_txt" maxlength="3"/> -
-                    <input type="text" name="bizRegNum2" style="width:36px;" class="input_txt" maxlength="2"/> -
-                    <input type="text" name="bizRegNum3" style="width:36px;" class="input_txt" maxlength="6"/></td>
-                </tr> 
-                <tr> 
-                    <th>상호명(법인명)</th>
-                    <td><input type="text" name="vndrName" style="width:200px;" class="input_txt"/></td>
-                    <th>대표자명</th>
-                    <td><input type="text" name="primeName" style="width:140px;" class="input_txt" /></td>
-                </tr>
-                <tr>
-                    <th>업태</th>
-                    <td><input type="text" name="bizTypeInfo" style="width:200px;" class="input_txt"/></td>
-                    <th>종목</th>
-                    <td><input type="text" name="bizKindInfo" style="width:140px;" class="input_txt"/></td>
-                </tr>
-                <tr>
-                <tr>
-                    <th>사업자 소재지</th>
-                    <td colspan="3"><input type="text" name="vndrAddr" style="width:530px;" class="input_txt" /></td>
-                </tr>
-                <tr>
-                    <th>담당자명</th>
-                    <td colspan="3"><input type="text" name="mngrName" style="width:130px;" class="input_txt" /></td>
-                </tr>
-                <tr>
-                    <th>이메일</th>
-                    <td colspan="3">
-                        <input type="text" name="emailAddr1" class="input_txt" style="width:170px;"/><span class="mm1"> @ </span>
-                        <input type="text" name="emailAddr2" class="input_txt" style="width:170px;" class="input_txt" />
-                        <select name="emailSelect" class="select" style="width:157px;">
-                            <option value="">직접입력</option>
-                            <option value="naver.com">naver.com</option>
-                            <option value="hanmail.net">hanmail.net</option>
-                            <option value="hotmail.com">hotmail.com</option>
-                            <option value="nate.com">nate.com</option>
-                            <option value="yahoo.co.kr">yahoo.co.kr</option>
-                            <option value="empas.com">empas.com</option>
-                            <option value="dreamwiz.com">dreamwiz.com</option>
-                            <option value="freechal.com">freechal.com</option>
-                            <option value="lycos.co.kr">lycos.co.kr</option>
-                            <option value="korea.com">korea.com</option>
-                            <option value="gmail.com">gmail.com</option>
-                            <option value="hanmir.com">hanmir.com</option>
-                            <option value="paran.com">paran.com</option>
-                        </select>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="btn_area t_center mgt30">
-            <a href="#n" class="btn_type04_v2" id="">취소</a>
-            <a href="#n" class="btn_type04_v1 mgl10" id="">등록</a>
+<!-- 201228 S : 작업부분 body에 class="orderandpay" 넣어주세요  -->
+<body class="popup orderandpay ">
+
+    <div>
+        <div class="tooltip_wrap active">
+            <div class="tooltip_inner">
+                <p class="tooltip_tit">사업자등록번호 등록</p>
+                <div class="pop_cont reset">
+                    <form name="createTaxBillRequestForm" id="createTaxBillRequestForm" action="/ht/mypage/addUserBusinessRegistNum" method="post">
+                        <table class="table02_v1 mgt15">
+                            <colgroup> 
+                                <col width="15%" />
+                                <col width="35%" />
+                                <col width="15%" />
+                                <col width="35%" />
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th>사업자등록번호</th>
+                                    <td colspan="3"><input type="text" name="bizRegNum1" style="width:36px;" class="input_txt" maxlength="3"/> -
+                                    <input type="text" name="bizRegNum2" style="width:36px;" class="input_txt" maxlength="2"/> -
+                                    <input type="text" name="bizRegNum3" style="width:36px;" class="input_txt" maxlength="6"/></td>
+                                </tr> 
+                                <tr> 
+                                    <th>상호명(법인명)</th>
+                                    <td><input type="text" name="vndrName" style="width:200px;" class="input_txt"/></td>
+                                    <th>대표자명</th>
+                                    <td><input type="text" name="primeName" style="width:140px;" class="input_txt" /></td>
+                                </tr>
+                                <tr>
+                                    <th>업태</th>
+                                    <td><input type="text" name="bizTypeInfo" style="width:200px;" class="input_txt"/></td>
+                                    <th>종목</th>
+                                    <td><input type="text" name="bizKindInfo" style="width:140px;" class="input_txt"/></td>
+                                </tr>
+                                <tr>
+                                <tr>
+                                    <th>사업자 소재지</th>
+                                    <td colspan="3"><input type="text" name="vndrAddr" style="width:530px;" class="input_txt" /></td>
+                                </tr>
+                                <tr>
+                                    <th>담당자명</th>
+                                    <td colspan="3"><input type="text" name="mngrName" style="width:130px;" class="input_txt" /></td>
+                                </tr>
+                                <tr>
+                                    <th>이메일</th>
+                                    <td colspan="3">
+                                        <input type="text" name="emailAddr1" class="input_txt" style="width:170px;"/><span class="mm1"> @ </span>
+                                        <input type="text" name="emailAddr2" class="input_txt" style="width:170px;" class="input_txt" />
+                                        <select name="emailSelect" class="select" style="width:157px;">
+                                            <option value="">직접입력</option>
+                                            <option value="naver.com">naver.com</option>
+                                            <option value="hanmail.net">hanmail.net</option>
+                                            <option value="hotmail.com">hotmail.com</option>
+                                            <option value="nate.com">nate.com</option>
+                                            <option value="yahoo.co.kr">yahoo.co.kr</option>
+                                            <option value="empas.com">empas.com</option>
+                                            <option value="dreamwiz.com">dreamwiz.com</option>
+                                            <option value="freechal.com">freechal.com</option>
+                                            <option value="lycos.co.kr">lycos.co.kr</option>
+                                            <option value="korea.com">korea.com</option>
+                                            <option value="gmail.com">gmail.com</option>
+                                            <option value="hanmir.com">hanmir.com</option>
+                                            <option value="paran.com">paran.com</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="btn_area t_center mgt40">
+                            <a href="#n" class="btn_type04_v1" id="">등록</a>
+                            <a href="#n" class="btn_type04_v2" id="">취소</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <a href="javascript:;" class="tooltip_close">닫기</a>
         </div>
-        </form>
     </div>
-</div>
 
-
-</div>
 </body>
 </html>
