--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -1423,7 +1423,7 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr" rowspan="35">마이핫트랙스</td>
+        <td class="s15" dir="ltr" rowspan="34">마이핫트랙스</td>
         <td class="s16" rowspan="1">마이핫트랙스 메인</td>
         <td class="s16" dir="ltr"></td>
         <td class="s10"></td>
@@ -1437,8 +1437,8 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
-        <td class="s16" dir="ltr" rowspan="14">주문정보</td>
-        <td class="s16" rowspan="5">주문/배송조회</td>
+        <td class="s16" dir="ltr" rowspan="13">주문정보</td>
+        <td class="s16" rowspan="4">주문/배송조회</td>
         <td class="s10">주문/배송조회</td>
         <td class="s16"></td>
         <td class="s17"></td>
@@ -1447,7 +1447,7 @@ th.row-headers-background {
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
-      <tr style='height:29px;'>
+      <!-- <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
         <td class="s10">상품평작성팝업</td>
@@ -1457,7 +1457,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr>
+      </tr> -->
       <tr style='height:29px;'>
         <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
         <td class="s14"></td>
@@ -1532,7 +1532,7 @@ th.row-headers-background {
         <td class="s10">반품/교환신청 상세</td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/returnExchange.html">./html/new/returnExchange.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/returnExchange_detail.html">./html/new/returnExchange_detail.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
